erDiagram
    %% DOMAIN: AUTH & RBAC
    users {
        bigint id PK
        varchar name
        varchar email UK
        varchar role_aktif
    }

    %% DOMAIN: KEPEGAWAIAN
    dosens {
        bigint id PK
        bigint user_id FK
        varchar nidn UK
        varchar nama_dosen
    }

    %% DOMAIN: MASTER DATA
    program_studis {
        bigint id PK
        varchar kode_prodi UK
        varchar nama_prodi
        varchar jenjang
    }

    %% DOMAIN: PMB
    calon_mahasiswas {
        bigint id PK
        bigint user_id FK
        bigint program_studi_id FK
        varchar nomor_pendaftaran UK
        varchar status_pendaftaran
    }

    %% DOMAIN: MAHASISWA (CORE)
    mahasiswas {
        bigint id PK
        bigint user_id FK
        bigint program_studi_id FK
        varchar nim UK
        varchar nama_lengkap
        varchar status_mahasiswa
    }

    %% DOMAIN: KURIKULUM & MATAKULIAH
    matakuliahs {
        bigint id PK
        bigint program_studi_id FK
        varchar kode_matakuliah UK
        varchar nama_matakuliah
        int sks_total
    }

    %% DOMAIN: AKADEMIK & KELAS KULIAH
    kelas_kuliahs {
        bigint id PK
        bigint matakuliah_id FK
        bigint tahun_ajaran_id FK
        varchar nama_kelas
        int kapasitas
    }

    %% DOMAIN: KEUANGAN & KASIR
    tagihans {
        bigint id PK
        bigint mahasiswa_id FK
        varchar nomor_tagihan UK
        decimal total_tagihan
        varchar status_pembayaran
    }

    pembayarans {
        bigint id PK
        bigint tagihan_id FK
        varchar nomor_transaksi UK
        decimal jumlah_bayar
        varchar status_transaksi
    }

    %% DOMAIN: PERWALIAN & KONTRAK KRS
    krs {
        bigint id PK
        bigint mahasiswa_id FK
        bigint tahun_ajaran_id FK
        varchar status_krs
        int total_sks
    }

    krs_details {
        bigint id PK
        bigint krs_id FK
        bigint kelas_kuliah_id FK
        varchar status_persetujuan
    }

    %% DOMAIN: PRESENSI & PERKULIAHAN
    jurnal_perkuliahans {
        bigint id PK
        bigint kelas_kuliah_id FK
        int pertemuan_ke
        text materi_pembahasan
    }

    presensis {
        bigint id PK
        bigint jurnal_perkuliahan_id FK
        bigint mahasiswa_id FK
        varchar status_kehadiran
    }

    %% DOMAIN: PENILAIAN (KHS)
    nilais {
        bigint id PK
        bigint krs_detail_id FK
        decimal nilai_akhir
        varchar nilai_huruf
        decimal nilai_indeks
    }

    %% DOMAIN: TUGAS AKHIR & YUDISIUM
    proposal_skripsis {
        bigint id PK
        bigint mahasiswa_id FK
        text judul_proposal
        varchar status_proposal
    }

    skripsis {
        bigint id PK
        bigint proposal_skripsi_id FK
        bigint mahasiswa_id FK
        text judul_skripsi
        varchar status_skripsi
    }

    yudisiums {
        bigint id PK
        bigint mahasiswa_id FK
        varchar nomor_sk_yudisium
        date tanggal_yudisium
        varchar predikat_kelulusan
    }

    %% RELASI STRUKTURAL LINTAS DOMAIN
    users ||--o| dosens : "memiliki_profil_dosen"
    users ||--o| mahasiswas : "memiliki_profil_mahasiswa"
    users ||--o| calon_mahasiswas : "memiliki_profil_camaba"

    program_studis ||--o{ dosens : "homebase"
    program_studis ||--o{ mahasiswas : "terdaftar_pada"
    program_studis ||--o{ matakuliahs : "menyelenggarakan"
    program_studis ||--o{ calon_mahasiswas : "pilihan_prodi"

    matakuliahs ||--o{ kelas_kuliahs : "dibuka_menjadi"
    dosens ||--o{ kelas_kuliahs : "mengajar_melalui_pivot"

    %% Alur Mahasiswa & Akademik
    calon_mahasiswas ||--o| mahasiswas : "dikonversi_menjadi"
    mahasiswas ||--o{ tagihans : "diterbitkan_tagihan"
    tagihans ||--o{ pembayarans : "dilunasi_oleh"

    mahasiswas ||--o{ krs : "mengajukan_krs"
    krs ||--|{ krs_details : "memilih_mata_kuliah"
    kelas_kuliahs ||--o{ krs_details : "peserta_kelas"

    %% Alur Kuliah, Presensi & Nilai
    kelas_kuliahs ||--o{ jurnal_perkuliahans : "pelaksanaan_tatap_muka"
    jurnal_perkuliahans ||--o{ presensis : "catatan_kehadiran"
    mahasiswas ||--o{ presensis : "status_hadir"
    krs_details ||--o| nilais : "memperoleh_hasil_studi"

    %% Alur Kelulusan
    mahasiswas ||--o{ proposal_skripsis : "mengajukan_judul"
    proposal_skripsis ||--o| skripsis : "disetujui_menjadi"
    mahasiswas ||--o{ skripsis : "mengerjakan_tugas_akhir"
    mahasiswas ||--o| yudisiums : "ditetapkan_kelulusan"